--- a/QuickZip/ClientApp/app/master/historical-mandate/historical-mandate.component.html
+++ b/QuickZip/ClientApp/app/master/historical-mandate/historical-mandate.component.html
@@ -4,7 +4,20 @@
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
                 <span class="legal">Historical Mandate</span>
             </div>
+
             <div class="rightmenu">
+                <div class="toolbar pull-right">
+                    <label>
+                        Total Mandate Count :
+                    </label>
+                    <label id="lblTotalMcont">
+                        <span [innerHTML]="TotalCount"> 0 </span>
+
+                    </label>
+
+                </div>
+            </div>
+            <!--<div class="rightmenu">
                 <div class="toolbar pull-right">
                     <ul class="toolbar-content">
 
@@ -55,56 +68,64 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
         </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-4 col-xs-4">
-                <div class="form-group">
-                    <label class="col-sm-5 col-md-4 col-xs-4 control-label" for="form-field-1">
-                        From Date
-                    </label>
-                    <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
-                        <input type="date" class="col-sm-12 col-md-12 col-xs-12 htmldateheight" #FromDate/>
+        <form style="overflow: visible!important;" [formGroup]="HistoricalMandateForm" autocomplete="off" class="form">
+            <div class="row">
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                    <div class="form-group">
+                        <label class="col-sm-5 col-md-4 col-xs-4 control-label" for="form-field-1">
+                            From Date
+                        </label>
+                        <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
+                            <input name="FromDate" value="{{currentdate | date:'yyyy-mm-dd'}}" type="date" id="date" class="col-sm-12 col-md-12 col-xs-12 htmldateheight" #FromDate formControlName="FromDate" />
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4">
-                <div class="form-group">
-                    <label class="col-sm-5 col-md-4 col-xs-4 control-label" for="form-field-1">
-                        To Date
-                    </label>
-                    <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
-                        <input type="date" class="col-sm-12 col-md-12 col-xs-12 htmldateheight" #ToDate/>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
-                        <input type="button" class="col-sm-12 col-md-12 col-xs-12 htmldateheight" value="Search" (click)="SearchFunction(FromDate.value,ToDate.value)"/>
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                    <div class="form-group">
+                        <label class="col-sm-5 col-md-4 col-xs-4 control-label" for="form-field-1">
+                            To Date
+                        </label>
+                        <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
+                            <input name="ToDate" value="{{currentdate | date:'yyyy-mm-dd'}}" type="date" id="date" class="col-sm-12 col-md-12 col-xs-12 htmldateheight" #ToDate formControlName="ToDate" />
+                        </div>
                     </div>
                 </div>
 
 
+
+
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                    <div class="form-group">
+                        <div class="col-sm-3 col-md-3 col-xs-3 displayinlineblock">
+                            <input type="button" class="col-sm-12 col-md-12 col-xs-12y btn btn-primary htmldateheight" value="Search" (click)="SearchFunction(FromDate.value,ToDate.value)" />
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <div class="col-md-4 col-sm-4 col-xs-4">         
-            </div>
+        </form>
+        <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:7%;">
+            <input type="button" class="col-sm-12 col-md-1 col-xs-12y btn btn-primary htmldateheight" value="Download Excel" (click)="download()" />
+
 
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="top: 1%;">
             <table id="histmandtbl">
                 <thead>
                     <tr>
-                        <th style="width:150px;">Mandate Status</th>
-                        <th style="width:150px;">Mandate Id</th>
+                        <th style="width:300px;">Mandate Status</th>
+                        <th style="width:350px;">Mandate Id</th>
                         <th style="width:150px;">Reference 1</th>
                         <th style="width:150px;">Accept Reference No.</th>
                         <th style="width:150px;">NPCI Msg Id</th>
-                        <th style="width:150px;">UMRN</th>
+                        <th style="width:350px;">UMRN</th>
                         <th style="width:150px;">Aggregator</th>
                         <th style="width:150px;">Mandate Mode</th>
                         <th style="width:150px;">Auto Rejected Reason</th>
-                        <th style="width:150px;">HO Acceptance</th>
-                        <th style="width:150px;">Rejection Reason</th>
+                        <th style="width:400px;">HO Acceptance</th>
+                        <th style="width:400px;">Rejection Reason</th>
                         <th style="width:150px;">Uploaded From</th>
                         <th style="width:150px;">Mandate Type</th>
                         <th style="width:150px;">Acc. Holder Name</th>
@@ -113,8 +134,8 @@
                         <th style="width:150px;">Mandate Printed</th>
                         <th style="width:150px;">Mandate Scan</th>
                         <th style="width:150px;">Amount</th>
-                        <th style="width:150px;">Amount(In Words)</th>
-                        <th style="width:150px;">Account No.</th>
+                        <th style="width:600px;">Amount(In Words)</th>
+                        <th style="width:400px;">Account No.</th>
                         <th style="width:150px;">IFSC/MICR</th>
                         <th style="width:150px;">Bank Name</th>
                         <th style="width:150px;">Frequency</th>
@@ -134,53 +155,59 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
+                    <tr *ngFor="let Data of BindAllData" (dblclick)="doubleClick(Data)">
+                        <td style="width:300px;">{{Data.status}}</td>
+                        <td style="width:350px;">{{Data.MandateFreshId}}</td>
+                        <td style="width:150px;">{{Data.Refrence1}}</td>
+                        <td style="width:150px;">{{Data.AcceptRefNo}}</td>
+                        <td style="width:150px;">{{Data.NPCIMsgId}}</td>
+                        <td style="width:350px;">{{Data.UMRN}}</td>
+                        <td style="width:150px;">{{Data.AggregatorValue}}</td>
+                        <td style="width:150px;">{{Data.mandateMode}}</td>
+                        <td style="width:150px;">{{Data.AutoRejectReason}}</td>
 
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
+                        <td style="width:400px;">{{Data.MandateStatus}}</td>
+                        <td style="width:400px;">{{Data.RejectedReason}}</td>
+                        <td style="width:150px;">{{Data.IsMobileData}}</td>
+                        <td style="width:150px;">{{Data.Enach}}</td>
+                        <td style="width:150px;">{{Data.Customer1}}</td>
+                        <td style="width:150px;">{{Data.DateOnMandate}}</td>
+                        <td style="width:150px;">{{Data.FromDate}}</td>
+
+                        <td style="width:150px;">{{Data.IsPrint}}</td>
+                        <td style="width:150px;">{{Data.IsScan}}</td>
+
+                        <td style="width:150px;">{{Data.Amount_Numeric}}</td>
+                        <td style="width:600px;">{{Data.Amount}}</td>
+                        <td style="width:400px;">{{Data.AcNo}}</td>
+                        <td style="width:150px;">{{Data.Code}}</td>
+                        <td style="width:150px;">{{Data.BankName}}</td>
+                        <td style="width:150px;">{{Data.Frequency}}</td>
+                        <td style="width:150px;">{{Data.debittype}}</td>
+                        <td style="width:150px;">{{Data.ToDebit}}</td>
+                        <td style="width:150px;">{{Data.SponsorBankCode}}</td>
+
+                        <td style="width:150px;">{{Data.username}}</td>
+                        <td style="width:150px;">{{Data.CreatedOn}}</td>
+                        <td style="width:150px;">{{Data.UpdatedBy}}</td>
+                        <td style="width:150px;">{{Data.SendToBankDate}}</td>
+                        <td style="width:150px;">{{Data.PhoneNumber}}</td>
+                        <td style="width:150px;">{{Data.EmailId}}</td>
+                        <td style="width:150px;">{{Data.EmandateType}}</td>
+
+
+
+                        <td style="width:150px;">{{Data.ActivityId}}</td>
+                        <td style="width:150px;">{{Data.Reference2}}</td>
+                        <td style="width:150px;">{{Data.NPCIErrorDesc}}</td>
 
                     </tr>
-                    
+
                 </tbody>
 
             </table>
 
         </div>
-     
+
     </div>
 </div>
