--- a/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.html
+++ b/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.html
@@ -65,8 +65,8 @@
                         <label class="col-sm-5 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
                             From Date
                         </label>
-                        <div class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                            <input type="date" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" />
+                        <div [formGroup]="dmandateForm" class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                            <input type="date" class="col-sm-12 col-md-12 col-xs-12" formControlName="fromdate" [ngModel]="fromdate | date:'yyyy-MM-dd'" style="height: 22px;" #FromDate />
                         </div>
                     </div>
                 </div>
@@ -75,8 +75,8 @@
                         <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
                             To Date
                         </label>
-                        <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                            <input type="date" value="1" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" />
+                        <div [formGroup]="dmandateForm" class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                            <input type="date" class="col-sm-12 col-md-12 col-xs-12" formControlName="todate" [ngModel]="todate | date:'yyyy-MM-dd'" style="height: 22px;" #ToDate (change)="SearchFunction(FromDate.value,ToDate.value,Bank.value)" />
                         </div>
                     </div>
                 </div>
@@ -86,9 +86,12 @@
                             Bank
                         </label>
                         <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                            <select id="" class="alldropdown">
-                                <option value="volvo">Bank 1</option>
-                                <option value="saab">Bank 2</option>
+                            <select id="" class="alldropdown" #Bank (change)="SearchFunction(FromDate.value,ToDate.value,Bank.value)">
+                                <!--<option value="0">Select</option>-->
+                                <option *ngFor="let lang of bankbind"
+                                        value={{lang.sponsorbankcode}}>
+                                    {{lang.name}}
+                                </option>
 
                             </select>
                         </div>
@@ -97,26 +100,29 @@
             </div>
             <div class="row no-padding">
                 <div class="col-md-4 col-sm-4 col-xs-12">
-               
+
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
-                   
+
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                     <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
-                           value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" />
+                           value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="SearchFunction(FromDate.value, ToDate.value, Bank.value)" />
+                    <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
+                           value="Download Excel" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="download()" />
+
                 </div>
             </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
-            <table id="tbldownemandate">
+            <table id="tblEmandate">
                 <thead>
                     <tr>
-                        <th style="width:150px;"><input type="checkbox" name="all">All</th>
+                        <th style="width:150px;"><input type="checkbox" name="all" vaule="all" (click)="toggleSelect($event)">All</th>
                         <th style="width:150px;">Debtor Name</th>
                         <th style="width:220px;">Instructed Agent Member Name</th>
                         <th style="width:220px;">Consumer Reference Number</th>
-                        <th style="width:220px;">Debtor Account Number</th>
+                        <th style="width:500px;">Debtor Account Number</th>
                         <th style="width:150px;">Debtor Agent ID</th>
                         <th style="width:150px;">Collection Amount</th>
                         <th style="width:150px;">Maximum Amount</th>
@@ -128,20 +134,20 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td style="width:150px;"><input type="checkbox" name="all"></td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        
+                    <tr *ngFor="let lang of Databind">
+                        <td style="width:150px;"><input type="checkbox" name="all" value="lang.selected" [checked]="lang.selected" (change)="onChange($event,lang); lang.selected = !(lang.selected)"></td>
+                        <td style="width:150px;"> {{lang.DebtorName}}</td>
+                        <td style="width:220px;">{{lang.InstructedAgentMemberName}}</td>
+                        <td style="width:220px;">{{lang.ConsumerReferenceNumber}}</td>
+                        <td style="width:500px;">{{lang.DebtorAccountNumber}}</td>
+                        <td style="width:150px;">{{lang.DebtorAgentID}}</td>
+                        <td style="width:150px;">{{lang.Collection}}</td>
+                        <td style="width:150px;">{{lang.MaximumAmount}}</td>
+                        <td style="width:150px;">{{lang.ServiceProvider}}</td>
+                        <td style="width:150px;">{{lang.Frequency}}</td>
+                        <td style="width:150px;">{{lang.DebtorAccountType}}</td>
+                        <td style="width:150px;">{{lang.CreationDateTime}}</td>
+
                     </tr>
 
                 </tbody>
