--- a/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.css
+++ b/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.css
@@ -17,20 +17,23 @@
 }
 
 
-#tbldownemandate tbody {
-    overflow: auto;
+#tblEmandate tbody {
     display: block;
-    max-height: 26vh;
+    max-height: 60vh;
 }
 
-    #tbldownemandate tbody tr {
+    #tblEmandate tbody td {
+        white-space: nowrap;
+    }
+
+    #tblEmandate tbody tr {
         width: 100%;
         display: table;
         table-layout: fixed;
     }
 
 
-#tbldownemandate thead tr {
+#tblEmandate thead tr {
     width: 100%;
     display: table;
     table-layout: fixed;
@@ -39,14 +42,12 @@
 
 
 
-#tbldownemandate {
+#tblEmandate {
     overflow-x: scroll;
     display: inline-block;
 }
 
-    #tbldownemandate tbody {
-        width: 2011px;
-    }
+
 
 
 #maincontent {
