--- a/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
@@ -116,49 +116,50 @@
             </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
-            <table id="tbldownmandate">
-                <thead>
-                    <tr>
-                        <th style="width:150px;"><input type="checkbox" name="all">All</th>
-                        <th style="width:150px;">Mandate ID</th>
-                        <th style="width:150px;">Name</th>
-                        <th style="width:150px;">Date On Mandate</th>
-                        <th style="width:150px;">Mandate Printed</th>
-                        <th style="width:150px;">Mandate Scan</th>
-                        <th style="width:150px;">Reference</th>
-                        <th style="width:150px;">Amount</th>
-                        <th style="width:150px;">Account No.</th>
-                        <th style="width:150px;">IFSC/MICR</th>
-                        <th style="width:150px;">Bank Name</th>
-                        <th style="width:150px;">Frequency</th>
-                        <th style="width:150px;">Debit Type</th>
-                        <th style="width:150px;">Debit To</th>
-                        <th style="width:150px;">Created on</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td style="width:150px;"><input type="checkbox" name="all"></td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                    </tr>
+            <div id="tbldownmandate">
+                <table>
+                    <thead>
+                        <tr>
+                            <th style="width:150px;"><input type="checkbox" name="all">All</th>
+                            <th style="width:150px;">Mandate ID</th>
+                            <th style="width:150px;">Name</th>
+                            <th style="width:150px;">Date On Mandate</th>
+                            <th style="width:150px;">Mandate Printed</th>
+                            <th style="width:150px;">Mandate Scan</th>
+                            <th style="width:150px;">Reference</th>
+                            <th style="width:150px;">Amount</th>
+                            <th style="width:150px;">Account No.</th>
+                            <th style="width:150px;">IFSC/MICR</th>
+                            <th style="width:150px;">Bank Name</th>
+                            <th style="width:150px;">Frequency</th>
+                            <th style="width:150px;">Debit Type</th>
+                            <th style="width:150px;">Debit To</th>
+                            <th style="width:150px;">Created on</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="width:150px;"><input type="checkbox" name="all"></td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                            <td style="width:150px;">Demo</td>
+                        </tr>
 
-                </tbody>
+                    </tbody>
 
-            </table>
-
+                </table>
+            </div>
         </div>
 
     </div>
