--- a/QuickZip/ClientApp/app/master/dashboard/dashboard.component.html
+++ b/QuickZip/ClientApp/app/master/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
-<p>
-  dashboard works!
-</p>
+<div class="main-content" id="maincontent">
+    <div class="content">
+        <span class="legal">Dashboard</span>
+       
+
+    </div>
+</div>
