--- a/QuickZip/Views/Shared/_Layout.cshtml
+++ b/QuickZip/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    @*<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">*@
+    <link href="~/ClientApp/assets/css/style.css" rel="stylesheet" />
     <style>
         .loaderposition {
             position: absolute;
