--- a/QuickZip/ClientApp/app/header/header.component.html
+++ b/QuickZip/ClientApp/app/header/header.component.html
@@ -13,12 +13,32 @@
         </div>
     </div>
     <div class="quickrightDiv">
+        <!--<div class="navbar-buttons navbar-header pull-right adminddl" role="navigation">
+            <ul class="nav ace-nav">
+                <li class="light-blue dropdown-modal">
+                    <a data-toggle="dropdown" href="#" class="dropdown-toggle no-padding">
+                        <span class="user-info">Welcome User</span>
+                    </a>
+                    <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
+                        <li class="logouthover">
+                            <i class="logoutdiv ace-icon fa fa-key"
+                               aria-hidden="true"></i><span class="logoutcolor">Change Password</span>
+                        </li>
+                        <li class="logouthover">
+                            <i class="logoutdiv ace-icon fa fa-power-off">
+                            </i><span class="logoutcolor">Log Out</span>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>-->
         <div>
             <h5 class="logout" (click)="logout()"><i class="fa fa-power-off" aria-hidden="true"></i> Logout</h5>
             <!--<img src="../../ClientApp/assets/images/kotak-bank-logo.png" />-->
         </div>
-        <div class="navbar-buttons navbar-header pull-right adminddl" role="navigation">
-        </div>
+
+
+
 
     </div>
 </div>
