--- a/QuickZip/ClientApp/app/master/user/user.component.html
+++ b/QuickZip/ClientApp/app/master/user/user.component.html
@@ -9,7 +9,7 @@
                     <ul class="toolbar-content">
 
 
-                        <li>
+                        <li (click)="download()" id="btnExport">
                             <i class="fa fa-download" aria-hidden="true" title="Export"></i>
                             <label>
                                 Export
@@ -21,7 +21,7 @@
                                 New
                             </label>
                         </li>
-                        <li id="btnEdit">
+                        <li (click)="editData()" id="btnEdit">
                             <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
                             <label>
                                 Edit
@@ -60,12 +60,12 @@
             <div class="col-md-4 col-sm-4 col-xs-4"></div>
             <div class="col-md-5 col-sm-4 col-xs-4"></div>
             <div class="col-md-3 col-sm-4 col-xs-4">
-                <div class="form-group">
+                <div class="form-group" id="divSearch">
                     <label class="col-sm-5 col-md-4 col-xs-4 control-label" for="form-field-1">
                         Search
                     </label>
                     <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
-                        <input type="text" class="col-sm-12 col-md-12 col-xs-12" />
+                        <input type="text" id="txtSearch" class="col-sm-12 col-md-12 col-xs-12" (keyup)="bindUser()"/>
                     </div>
                 </div>
             </div>
@@ -77,20 +77,20 @@
                     <tr>
                         <th style="display: none;"></th>
                         <th>Sr No.</th>
-                        <th>User Type</th>
-                        <th>User ID</th>
-                        <th>Contact No.</th>
+                        <th>User Name</th>
                         <th>Email Address</th>
+                        <th>Contact No.</th>
+                        <th>Type</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let User of userdata ; index as i" (dblclick)="onRowClicked(User)" (click)="setClickedRow(i)" [class.active]="i == selectedRow">
+                    <tr *ngFor="let User of userdata ; index as i" (dblclick)="onRowClicked(User)" (click)="setClickedRow(User)" [class.active]="i == selectedRow">
                         <td style="display: none;">{{User.UserId}}</td>
                         <td>{{User.Srno}}</td>
-                        <td>{{User.Type}}</td>
                         <td>{{User.UserName}}</td>
-                        <td>{{User.PhoneNo}}</td>
                         <td>{{User.EmailId}}</td>
+                        <td>{{User.PhoneNo}}</td>
+                        <td>{{User.Type}}</td>
                     </tr>
 
                 </tbody>
@@ -196,14 +196,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class=" col-sm-12 col-xs-12 col-md-12 no-padding">
+                                <div class="row no-padding">
                                     <div class="col-md-4 col-sm-4 col-xs-12  no-padding" id="dvtxtBankValidationcount" *ngIf="dvtxtBankValidationcount">
                                         <div class="form-group">
                                             <label class="col-sm-5 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
                                                 Bank Validation
                                             </label>
                                             <div class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                                <input type="text" name="bankval" class="col-sm-12 col-md-12 col-xs-12" formControlName="bankval" />
+                                                <input type="text" name="bankval" class="col-sm-12 col-md-12 col-xs-12" formControlName="bankval" (change)="bankValidationChange()"/>
                                             </div>
                                         </div>
                                     </div>
@@ -213,7 +213,7 @@
                                                 Account Validation
                                             </label>
                                             <div class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                                <input type="text" name="accountval" class="col-sm-12 col-md-12 col-xs-12" formControlName="accountval" />
+                                                <input type="text" name="accountval" class="col-sm-12 col-md-12 col-xs-12" formControlName="accountval" (change)="accountValidationChange()"/>
                                             </div>
                                         </div>
                                     </div>
@@ -229,6 +229,7 @@
                                                 <!--<input type="text" class="col-sm-12 col-md-12 col-xs-12 no-padding  spneser bankcodeposition" />-->
                                                 <!--<ng-multiselect-dropdown formControlName="sponsorbankcode"  [ngClass]="displayFieldCss('sponsorbankcode')" name="sponsorcode"
                                                     [placeholder]="'Select'"
+
                                                     [data]="sponsorbankcode"
                                                     [settings]="dropdownSettings">
 
@@ -429,7 +430,7 @@
                                                                 <select class="col-sm-12 col-md-12 col-xs-12  viewrowmargin  no-padding" formControlName="nachuser" name="nachuser">
                                                                     <option value="0">--Select--</option>
 
-                                                                    <option *ngFor="let NachUser of nachusser" value="{{NachUser.UserId}}"> {{NachUser.UserName}} </option>
+                                                                    <option *ngFor="let NachUser of nachuser" value="{{NachUser.UserId}}"> {{NachUser.UserName}} </option>
                                                                 </select>
                                                                 <label style="color: red; display: none">
                                                                     Please select atleast one user
@@ -535,8 +536,8 @@
                                                         </label>
                                                         <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="divbulkupload" *ngFor="let data of bulkupload">
                                                             <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" name="rdoAccess" id={{data.LinkID}}
-                                                                       class="pull-left" value={{data.LinkID}} />
+                                                                <input type="checkbox" name="chkbulkuploadlink" [formControlName]="chkbulkuploadlink" id={{data.LinkID}}
+                                                                       class="pull-left" value={{data.LinkID}} (click)="checkLinks(data)"/>
                                                                 <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
                                                                     {{data.LinkName}}
                                                                 </label>
@@ -569,8 +570,8 @@
                                                         </label>
                                                         <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="divvideo" *ngFor="let data of bulkvideo">
                                                             <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" name="rdoAccess" id={{data.LinkID}}
-                                                                       class="pull-left" value={{data.LinkID}} />
+                                                                <input type="checkbox" name="chkvideolink"  [formControlName]="chkvideolink" id={{data.LinkID}}
+                                                                       class="pull-left" value={{data.LinkID}} (click)="checkVideoLinks(data)"/>
                                                                 <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
                                                                     {{data.LinkName}}
                                                                 </label>
@@ -580,8 +581,8 @@
                                                                 <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
                                                                     Emandate
                                                                 </label>
-                                                            </div>
-                                                            <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
+                                                            </div>-->
+                                                            <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
                                                                 <input onclick="RemoveClass();" type="checkbox" name="rdoAccess" id="bulkphysicaldemo"
                                                                        class="pull-left" value="1" />
                                                                 <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
