--- a/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.html
+++ b/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.html
@@ -1,5 +1,6 @@
 <div class="main-content" id="maincontent">
     <div class="content">
+        <!--<label id="lblName">{{errormsg}}</label>-->
         <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
                 <span class="legal">Download E-Mandate</span>
@@ -10,10 +11,14 @@
 
 
                         <li>
-                            <i class="fa fa-download" aria-hidden="true" title="Export"></i>
-                            <label>
-                                Download E-Mandate Excel File
-                            </label>
+
+                          
+
+
+
+
+
+
                         </li>
                         <!--<li>
                             <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
@@ -108,8 +113,13 @@
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                     <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
                            value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="SearchFunction(FromDate.value, ToDate.value, Bank.value)" />
-                    <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
-                           value="Download Excel" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="download()" />
+                    
+                    <span id="btnspa">
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                        <input type="button" class=" btn btn-success" id="btnexcel"
+                               value="Download Excel" (click)="download()" />
+                    </span>
+
 
                 </div>
             </div>
@@ -118,7 +128,7 @@
             <table id="tblEmandate">
                 <thead>
                     <tr>
-                        <th style="width:150px;"><input type="checkbox" name="all" vaule="all" (click)="toggleSelect($event)">All</th>
+                        <th style="width:150px;"><input type="checkbox" name="all" value="all" (click)="toggleSelect($event)">All</th>  <!--(change)="Removelabel()"-->
                         <th style="width:150px;">Debtor Name</th>
                         <th style="width:220px;">Instructed Agent Member Name</th>
                         <th style="width:220px;">Consumer Reference Number</th>
@@ -135,7 +145,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let lang of Databind">
-                        <td style="width:150px;"><input type="checkbox" name="all" value="lang.selected" [checked]="lang.selected" (change)="onChange($event,lang); lang.selected = !(lang.selected)"></td>
+                        <td style="width:150px;"><input type="checkbox" name="all" value="lang.selected" [checked]="lang.selected" (change)="onChange($event,lang); lang.selected = !(lang.selected)"></td>  <!--(click)="Removelabel()"-->
                         <td style="width:150px;"> {{lang.DebtorName}}</td>
                         <td style="width:220px;">{{lang.InstructedAgentMemberName}}</td>
                         <td style="width:220px;">{{lang.ConsumerReferenceNumber}}</td>
@@ -149,7 +159,9 @@
                         <td style="width:150px;">{{lang.CreationDateTime}}</td>
 
                     </tr>
-
+                    <tr *ngIf="Databind?.length == 0">
+                        <td colspan="3">No Record Found!</td>
+                    </tr>
                 </tbody>
 
             </table>
