--- a/QuickZip/ClientApp/app/master/umrnhistory/umrnhistory.component.html
+++ b/QuickZip/ClientApp/app/master/umrnhistory/umrnhistory.component.html
@@ -65,9 +65,10 @@
                         <div class="form-group">
                             <label class="col-sm-5 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
                                 UMRN
+
                             </label>
                             <div class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                <input type="text" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" />
+                                <input type="text" required name="UMRN" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" formControlName="UMRN" #UMRN />
                             </div>
                         </div>
                     </div>
@@ -77,7 +78,7 @@
                                 Customer Name
                             </label>
                             <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                <input type="text" value="1" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" />
+                                <input type="text" required name="CustomerName" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" formControlName="CustomerName" #CustomerName />
                             </div>
                         </div>
                     </div>
@@ -87,7 +88,7 @@
                                 Reference Number
                             </label>
                             <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                <input type="text" value="1" class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" />
+                                <input type="text" required name="ReferenceNumber" class="col-sm-12 col-md-12 col-xs-12" style="height:  22px;" formControlName="ReferenceNumber" #RefrNo />
                             </div>
                         </div>
                     </div>
@@ -101,7 +102,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                         <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
-                               value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" />
+                               value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="SearchFunction(UMRN.value,CustomerName.value,RefrNo.value)" />
                     </div>
                 </div>
             </div>
@@ -115,19 +116,19 @@
                         <th style="width:220px;">Customer Name</th>
                         <th style="width:220px;">Reference Number</th>
                         <th style="width:220px;">Type</th>
-              
+
 
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                        <td style="width:220px;">Demo</td>
-                       
+                    <tr *ngFor="let data of AllData">
+
+                        <td style="width:150px;">{{data.Srno}}</td>
+                        <td style="width:220px;">{{data.UMRN}}</td>
+                        <td style="width:220px;">{{data.customer1}}</td>
+                        <td style="width:220px;">{{data.ReferenceNo}}</td>
+                        <td style="width:220px;">{{data.Type}}</td>
+
 
                     </tr>
 
