--- a/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.css
+++ b/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.css
@@ -1,3 +1,5 @@
+
+
 .card-header {
     padding: 0px;
 }
@@ -18,9 +20,10 @@
 
 
 #tbldownmandate tbody {
-    overflow: auto;
+  overflow-y:scroll;
+  overflow-x:hidden;
     display: block;
-    max-height: 26vh;
+    max-height: 50vh;
 }
 
 #tbldownmandate tbody tr {
@@ -34,9 +37,30 @@
     width: 100%;
     display: table;
     table-layout: fixed;
-}     
-  
+}
+#btnreject {
+    background: none !important;
+    color: #212529 !important;
+    font-size: 12px;
+    font-weight: bold;
+}
 
+#btnexcel {
+    background: none !important;
+    color: #212529 !important;
+    font-size: 12px;
+    font-weight: bold;
+}
+#btnp {
+   
+    width: 100%;
+}
+
+#btnspa {
+   
+ 
+    width: 100%;
+}
 
 
 #tbldownmandate {
@@ -44,9 +68,6 @@
     display: inline-block;
 }
 
-    #tbldownmandate tbody {
-        width: 2251px;
-    }
 
 
 #maincontent {
